--- a/Tip Calc/Base.lproj/Main.storyboard
+++ b/Tip Calc/Base.lproj/Main.storyboard
@@ -15,31 +15,47 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VVj-nB-CiX">
+                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Total Bill" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VVj-nB-CiX">
                                 <rect key="frame" x="20" y="224" width="374" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LYw-Wn-zMc">
-                                <rect key="frame" x="30" y="273" width="354" height="34"/>
+                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Tip Percentage" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LYw-Wn-zMc">
+                                <rect key="frame" x="20" y="273" width="374" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FEM-3e-rwJ">
+                                <rect key="frame" x="160" y="315" width="94" height="30"/>
+                                <state key="normal" title="Calculate Tip!"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Tip Amount: $0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CJX-hj-63D">
+                                <rect key="frame" x="147.5" y="353" width="119" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="CJX-hj-63D" firstAttribute="top" secondItem="FEM-3e-rwJ" secondAttribute="bottom" constant="8" id="9Xs-aC-ZvW"/>
+                            <constraint firstItem="FEM-3e-rwJ" firstAttribute="top" secondItem="LYw-Wn-zMc" secondAttribute="bottom" constant="8" id="FGO-yo-5Oc"/>
                             <constraint firstItem="LYw-Wn-zMc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="I34-jK-80J"/>
                             <constraint firstItem="LYw-Wn-zMc" firstAttribute="firstBaseline" secondItem="VVj-nB-CiX" secondAttribute="baseline" constant="20" symbolType="layoutAnchor" id="ISs-hf-TGV"/>
+                            <constraint firstItem="FEM-3e-rwJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WpX-xu-elf"/>
                             <constraint firstItem="VVj-nB-CiX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="bJ3-Xg-2hP"/>
+                            <constraint firstItem="CJX-hj-63D" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cTX-U8-WDN"/>
+                            <constraint firstItem="LYw-Wn-zMc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="chm-fa-Q53"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VVj-nB-CiX" secondAttribute="trailing" constant="20" id="h2i-lH-HgO"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LYw-Wn-zMc" secondAttribute="trailing" constant="30" id="hOR-gt-h5z"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LYw-Wn-zMc" secondAttribute="trailing" constant="20" id="k7h-HJ-Rdb"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="132" y="121"/>
+            <point key="canvasLocation" x="131.8840579710145" y="120.53571428571428"/>
         </scene>
     </scenes>
 </document>
